--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,43 +71,78 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
+.search_box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  width: auto;
+  max-width: 90%;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+}
+
+.search_element {
+  margin: 1rem;
+  flex-basis: auto;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+  min-width: 20%;
+  max-width: 50%;
+}
+
+.search_element p {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
+.search_option {
+  margin: 0.5rem;
+  padding: 0.3rem;
+  text-align: center;
+  color: LightGray;
+  background: none;
   text-decoration: none;
   border: 1px solid #eaeaea;
-  border-radius: 10px;
+  outline: none;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
+.search_option:hover {
+  color: lightblue;
+  border-color: lightblue;
+}
+
+.option_selected {
+  margin: 0.5rem;
+  padding: 0.3rem;
+  text-align: center;
   color: #0070f3;
-  border-color: #0070f3;
+  border: 1px solid #0070f3;
+  background: none;
+  text-decoration: none;
+  outline: none;
+  transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.search_button {
+  padding: 1rem;
+  color: white;
+  background: #0070f3;
+  border: none;
+  outline: none;
+  transition: color 0.15s ease;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.search_button:hover {
+  color: LightGray;
+}
+
+.search_button:active {
+  color: Gray;
 }
 
 .logo {
