--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,10 @@
 .container {
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 0 0.5rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .main {
@@ -16,9 +16,25 @@
   align-items: center;
 }
 
+.main_horizontal {
+  min-width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.half {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 40%;
+}
+
 .footer {
   width: 100%;
-  height: 100px;
+  height: 70px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
@@ -74,7 +90,7 @@
 .search_box {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: nowrap;
   width: auto;
   max-width: 90%;
@@ -154,4 +170,40 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.log_in {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  width: 25vw;
+  height: 50vh;
+}
+
+.input_bar {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  width: 75%;
+}
+
+.submit_button {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  width: 75%;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  max-height: 10vh;
+}
+
+.header_element {
+  padding: 1rem;
 }
